--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
     </style>
     
-    <title>Heron Tomé Sarmento</title>
+    <title>Heron Tome Sarmento</title>
 </head>
 <body>
    
