--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
               <div class="col-6 col-sm-6 "><img src="imagens/sticker (1).png" alt="" style="width: 200px;"></div>
               <div class="col-6 col-sm-6 ">
                 <p>BLOGS</p>
-                <p>LANDING PAGES</p>
+                <p>LANDING PAGE</p>
                 <p>FORMULÁRIOS</p>
                 <p>ECOMMERCE</p>
                 <p></p>
@@ -267,17 +267,6 @@
           
         </footer>
       
-
-
-
-
-
-
-
-
-
-
-
       <!--Bootstrap script-->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
       <!--link de ANIMAÇAO DE FONTE-->
