--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <div class="projetos" id="projetos"> 
                   <div class="container text-center " >
                     <h1 >PROJETOS</h1>
-                    <div class="row row-cols-4" >
+                    <div class="row" >
                       
                       <div class="col-sm card-1">
                           <div class="card h-100" >
@@ -214,7 +214,7 @@
                             <div class="card-body">
                             <h5 class="card-title">SITE DA EPACE X</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-danger"><i class="bi bi-eye"></i> visualizar</a>
+                            <a href="" class="btn btn-danger"><i class="bi bi-eye"></i> visualizar</a>
                             </div>
                           </div>  
                       </div>
@@ -226,7 +226,7 @@
                             <div class="card-body">
                               <h5 class="card-title">HISTORIA DO ROBÔ ANDROID</h5>
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-danger"><i class="bi bi-eye"></i> visualizar</a>
+                              <a href="" class="btn btn-danger"><i class="bi bi-eye"></i> visualizar</a>
                             </div>
                         </div>
                       </div>
@@ -237,7 +237,7 @@
                             <div class="card-body">
                               <h5 class="card-title">JOGO DA VELHA EM JS</h5>
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-danger"><i class="bi bi-eye"></i> visualizar</a>                        
+                              <a href="" class="btn btn-danger"><i class="bi bi-eye"></i> visualizar</a>                        
                             </div>
                         </div>
                       </div>
