--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                   </div>
               </div>
 
-                <div class="projetos" id="projetos"> 
-                  <div class="container text-center " >
+                <div class="projetos" > 
+                  <div class="container text-center " id="projetos">
                     <h1 >PROJETOS</h1>
                     <div class="row" >
                       
