--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
  
       <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="#sobre-mim">
             <img class="icon-hts" src="imagens/icon-hts.png" alt="" style="width: 4rem;">
             Heron Tomé Sarmento
           </a>
