--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="p1"> 
               <div class="row" style="padding-top: 60px;">
               <div class="col-sm-6 description"><H1 class="name">HERON TOMÉ SARMENTO</H1>
-                <P class="mim">Sou desenvolvedor web, estudante de análise e desenvolvimento de sistemas</P>
+                <P class="mim">Sou desenvolvedor web e estudante de análise e desenvolvimento de sistemas</P>
 
                 <div class="rede-sociais01">
                   <a class="link-rede-1" target="_blank" href="https://www.linkedin.com/in/heron-tome-sarmento-048794206"><i class="bi bi-linkedin" ></i>Linkedin</a>
